--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -19,12 +23,14 @@
     </div>
 
     <div class="hero-section">
-        <div class="hero-left">Hero Left
-            <div class="hero-main-text">Hero Main Text</div>
-            <div class="hero-secondary-text">Hero Secondary Text</div>
-            <div class="sign-up-btn">Sign Up Button</div>
+        <div class="hero-left">
+            <div class="hero-main-text">This website is awesome</div>
+            <div class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <div class="sign-up-btn">
+                <button>Sign up</button>
+            </div>
         </div>
-        <div class="hero-right">Hero Right - img placeholder</div>
+        <div class="hero-right">this is a placeholder for an image</div>
     </div>
 
     <div class="information-section">
@@ -68,7 +74,7 @@
         <div class="sign-up-btn">Sign Up Button</div>
     </div>
 
-    <div class="footer">Footer Section</div>
+    <div class="footer">Copyright &copy; The Odin Project 2024</div>
 
 </body>
 </html>
