--- a/index.html
+++ b/index.html
@@ -37,33 +37,27 @@
         <div class="info-heading">Some random information.</div>
         <div class="info-content">
             <div class="info-card">
-                <div class="info-img">Info Img 1</div>
-                <div class="info-text">Info Text 1</div>
+                <div class="info-img"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
             </div>
-        </div>
-        <div class="info-content">
             <div class="info-card">
-                <div class="info-img">Info Img 2</div>
-                <div class="info-text">Info Text 2</div>
+                <div class="info-img"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
             </div>
-        </div>
-        <div class="info-content">
             <div class="info-card">
-                <div class="info-img">Info Img 3</div>
-                <div class="info-text">Info Text 3</div>
+                <div class="info-img"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
             </div>
-        </div>
-        <div class="info-content">
             <div class="info-card">
-                <div class="info-img">Info Img 4</div>
-                <div class="info-text">Info Text 4</div>
+                <div class="info-img"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
 
     <div class="quote-section">
-        <div class="quote">The whole quote</div>
-        <div class="quote-author">Quote Author</div>
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</div>
+        <div class="quote-author">-Thor, God of Thunder</div>
     </div>
 
     <div class="call-section">
