Style Call section and make final adjustments
Styled the call to action section, and made the necessary changes to
give margin and padding throughout the site to match the given
example. Stopped header and footer collapsing by giving min-height.

--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
 
     <div class="call-section">
         <div class="call-to-action">
-            <div class="call-to-action-heading">Call to action heading!</div>
-            <div class="call-to-action-text">Call to action text</div>
+            <div class="call-to-action-heading">Call to action! It's time!</div>
+            <div class="call-to-action-text">Sign up for our product by clicking that button right over there!</div>
         </div>
-        <div class="sign-up-btn">Sign Up Button</div>
+        <div class="sign-up-btn" id="call-sign-up-btn">
+            <button>Sign up</button>
+        </div>
     </div>
 
     <div class="footer">Copyright &copy; The Odin Project 2024</div>
